kube/enviroments/prod/coordinator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coordinator
  namespace: prod
  labels:
    app: coordinator
    app.kubernetes.io/part-of: microphoto
spec:
  type: ClusterIP
  selector:
    app: coordinator
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: 9090
